--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -50,6 +50,11 @@ a href{
     content: "";
 }
 
+.moneydiv {
+    padding: 0px;
+    margin: 0px;
+}
+
 .addpadding{
     padding-left: 20px;
 }
@@ -95,6 +100,10 @@ a href{
             outline: none;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
         }
+
+.dashNotifications{
+    display: inline-block;
+}
 
 .dbSpans{
     min-height:200px;
