Added Tooltips to the Edit Investments Page

--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -76,7 +76,7 @@
             </div>
             @*Categories list with checkboxes - populates using an ajax call (load_categories) below*@
             <div class="form-group">
-                <dd title=@ViewBag.Tooltips["date"]>Investment Tags</dd>
+                <dd title=@ViewBag.Tooltips["categories"]>Investment Tags</dd>
                 <div class="col-md-10">
                     <div id="CatList">
                         <ul></ul>
