--- a/ImpactMap/Views/Investments/Edit.cshtml
+++ b/ImpactMap/Views/Investments/Edit.cshtml
@@ -17,7 +17,7 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["date"] })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Investment.date, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
@@ -25,26 +25,26 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Investment.amount, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Investment.amount, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["amount"] })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Investment.amount, new { htmlAttributes = new { @type = "number", @min = "0.01", @step = "0.01", @class = "form-control" } })
+                            @Html.EditorFor(model => model.Investment.amount, new { htmlAttributes = new { @type = "number", @min = "0.01", @step = "0.01", @class = "form-control", @title = @ViewBag.Tooltips["amount"] } })
                             @Html.ValidationMessageFor(model => model.Investment.amount, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Investment.isInKind, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Investment.isInKind, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["inKind"] })
                         <div class="col-md-10">
                             <div class="checkbox">
                                 @Html.EditorFor(model => model.Investment.isInKind)
-                                @Html.ValidationMessageFor(model => model.Investment.isInKind, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(model => model.Investment.isInKind, "", new { @class = "text-danger"})
                             </div>
                         </div>
                     </div>
 
                     <!---Needs to populate only projects from the signed in entity-->
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Investment.projectFrom, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Investment.projectFrom, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["projectFrom"] })
                         <div class="col-md-10">
                             <select name="projectFrom_ID">
                                 @foreach (var project in Model.Projects)
@@ -57,7 +57,7 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Investment.entityTo, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Investment.entityTo, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["entityTo"] })
                         <div class="col-md-10">
                             <select name="entityTo_ID" id="recipientSelect">
                                 <option value=@Model.Investment.entityTo.ID selected>@Model.Investment.entityTo.name</option>
@@ -74,7 +74,7 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Investment.projectTo, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Investment.projectTo, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["projectTo"] })
                         <div class="col-md-10">
                             <select name="projectTo_ID" id="ProjectToDropdown">
                                 <option value=@Model.Investment.projectTo.ID selected>@Model.Investment.projectTo.name</option>
@@ -90,7 +90,7 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Investment.categories, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Investment.categories, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["categories"] })
                         <div class="col-md-10">
                             <div id="CatList">
                                 <ul>
@@ -114,7 +114,7 @@
 
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Investment.description, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Investment.description, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["ivmDescription"] })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Investment.description, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Investment.description, "", new { @class = "text-danger" })
