Added Tooltips to Projects

--- a/ImpactMap/Views/Projects/Index.cshtml
+++ b/ImpactMap/Views/Projects/Index.cshtml
@@ -34,7 +34,8 @@
                             @Html.DisplayFor(modelItem => item.name)
                         </td>
                         <td>
-                            @Html.ActionLink("Details", "Details", new { id = item.ID })
+                            @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                            @Html.ActionLink("Edit", "Edit", new { id = item.ID })
                         </td>
                     </tr>
 
