--- a/ImpactMap/Views/Projects/Create.cshtml
+++ b/ImpactMap/Views/Projects/Create.cshtml
@@ -17,7 +17,7 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Project.name, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Project.name, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["name"] })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Project.name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Project.name, "", new { @class = "text-danger" })
@@ -25,7 +25,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Project.description, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Project.description, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["projDescription"] })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Project.description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Project.description, "", new { @class = "text-danger" })
