New partial view for notifications

--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -2,10 +2,10 @@
 
 @{
     ViewBag.Title = "Index";
-    List<ImpactMap.Models.Project> Projects = Model.projects;
+    //List<ImpactMap.Models.Project> Projects = Model.projects;
 }
 
-@Html.Partial("_Layout", Projects);
+
 
 <div class="container dash">
     <div style="vertical-align: top;">
