--- a/ImpactMap/Views/Shared/_Layout.cshtml
+++ b/ImpactMap/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@model ImpactMap.Models.Project 
-<!DOCTYPE html>
+﻿ <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -39,24 +38,6 @@
                     <h1>ImpactMap</h1>
                 </div>
 
-
-                    <span class="noti glyphicon glyphicon-bell" id="bell"><span class="count">&nbsp;</span></span>
-                    <div id="bell-inner" class="hidden-notifications">
-                        <h3>Notifications</h3>
-                        <ul>
-                            @{
-                                foreach (var project in Model.projects)
-                                {
-                                    if (project.investmentsIn.Count > 0 && project.report == null)
-                                    {
-                                        <li>@project.name needs a report!</li>
-                                        @Html.ActionLink("Create Report", "Create", "Reports", new { id = project.ID }, null)
-                                    }
-                                }
-                            }
-                        </ul>
-                    </div>
-
 @*<<<<<<< HEAD
                 @Html.ActionLink("ImpactMap", "Index", "Dashboard", new { area = "" }, new { @class = "navbar-brand" })
             </div>
@@ -67,6 +48,7 @@
 =======*@
             
             <div class="navbar-collapse collapse">
+
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
@@ -104,9 +86,3 @@
     </footer>
 </body>
 </html>
-
-<script>
-    document.getElementById('bell').addEventListener("click", function () {
-        $('#bell-inner').append('<div>lgkd</div>');
-    });
-</script>
