Changed titles to be consistent

--- a/ImpactMap/Views/Categories/Create.cshtml
+++ b/ImpactMap/Views/Categories/Create.cshtml
@@ -1,18 +1,17 @@
 ﻿@model ImpactMap.Controllers.CategoryViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Tags";
 }
 
 <div class="container">
-<h2>Create</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Tag</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
