--- a/ImpactMap/Views/Categories/Edit.cshtml
+++ b/ImpactMap/Views/Categories/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ImpactMap.Models.Category
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Tags";
 }
 
 <div class="container">
-    <h2>Edit Tag</h2>
+    <h2>@ViewBag.Title</h2>
 
     @using (Html.BeginForm())
     {
