--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ImpactMap.Models.Entity
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Dashboard";
     //List<ImpactMap.Models.Project> Projects = Model.projects;
 }
 
