--- a/ImpactMap/Views/Entities/Delete.cshtml
+++ b/ImpactMap/Views/Entities/Delete.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ImpactMap.Models.Entity
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Organization";
 }
 
 <div class="container">
-    <h2>Delete</h2>
+    <h2>@ViewBag.Title</h2>
 
     <h3>Are you sure you want to delete this?</h3>
     <div>
