--- a/ImpactMap/Views/Investments/Delete.cshtml
+++ b/ImpactMap/Views/Investments/Delete.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ImpactMap.Models.Investment
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Investment";
 }
 
 <div class="container">
-    <h2>Delete Investment</h2>
+    <h2>@ViewBag.Title</h2>
 
     <h3>Are you sure you want to delete this?</h3>
     <div>
