--- a/ImpactMap/Views/Investments/Details.cshtml
+++ b/ImpactMap/Views/Investments/Details.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ImpactMap.Models.Investment
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Investment Details";
 }
 
 <div class="container">
 
-    <h2>Investment Details</h2>
+    <h2>@ViewBag.Title</h2>
 
     <div>
         <h4>Investment</h4>
