--- a/ImpactMap/Views/Investments/Edit.cshtml
+++ b/ImpactMap/Views/Investments/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ImpactMap.Controllers.InvestmentViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Investment";
 }
 
 <div class="container">
-    <h2>Edit Investment</h2>
+    <h2>@ViewBag.Title</h2>
 
     @using (Html.BeginForm())
     {
