--- a/ImpactMap/Views/Investments/Index.cshtml
+++ b/ImpactMap/Views/Investments/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ImpactMap.Models.Entity
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Investments List";
 }
 <div class="container">
 
-    <h2>Investments List</h2>
+    <h2>@ViewBag.Title</h2>
     <br /><br />
 
     <div class="addpadding" style="max-width:1200px;">
