--- a/ImpactMap/Views/Metrics/Create.cshtml
+++ b/ImpactMap/Views/Metrics/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ImpactMap.Models.Metric
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Metric";
 }
 
-<h2>Create</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm()) 
 {
