--- a/ImpactMap/Views/Metrics/Index.cshtml
+++ b/ImpactMap/Views/Metrics/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<ImpactMap.Models.Metric>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Metrics List";
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
