--- a/ImpactMap/Views/Projects/Create.cshtml
+++ b/ImpactMap/Views/Projects/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ImpactMap.Controllers.ProjectViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Project";
 }
 
 <div class="container">
-    <h2>Create Project</h2>
+    <h2>@ViewBag.Title</h2>
 
     @using (Html.BeginForm())
     {
