--- a/ImpactMap/Views/Projects/Details.cshtml
+++ b/ImpactMap/Views/Projects/Details.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ImpactMap.Models.Project
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Project Details";
 }
 
 <div class="container">
-    <h2>Project Details</h2>
+    <h2>@ViewBag.Title</h2>
 
     <div>
         <hr />
