--- a/ImpactMap/Views/Projects/Edit.cshtml
+++ b/ImpactMap/Views/Projects/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ImpactMap.Models.Project
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Project";
 }
 
 <div class="container">
-    <h2>Edit Project</h2>
+    <h2>@ViewBag.Title</h2>
 
     @using (Html.BeginForm())
     {
