--- a/ImpactMap/Views/Projects/Index.cshtml
+++ b/ImpactMap/Views/Projects/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-    <h2>Projects List</h2>
+    <h2>@ViewBag.Title</h2>
     <br /><br />
     <p class="addpadding">
         @Html.ActionLink("Create New", "Create")
