--- a/ImpactMap/Views/Reports/Details.cshtml
+++ b/ImpactMap/Views/Reports/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ImpactMap.Models.Report
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Report Details";
 }
 
 <div class="container">
-    <h2> Report Details</h2>
+    <h2> @ViewBag.Title</h2>
     <div>
 
         <hr />
