--- a/ImpactMap/Views/Reports/Edit.cshtml
+++ b/ImpactMap/Views/Reports/Edit.cshtml
@@ -1,18 +1,17 @@
 ﻿@model ImpactMap.Models.Report
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Report";
 }
 
 <div class="container">
-    <h2>Edit</h2>
+    <h2>@ViewBag.Title</h2>
 
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Report</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.ID)
