--- a/ImpactMap/Views/Categories/Delete.cshtml
+++ b/ImpactMap/Views/Categories/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model ImpactMap.Models.Category
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Tags";
 }
 <div class="container">
-    <h2>Delete</h2>
+    <h2>@ViewBag.Title</h2>
 
     <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>Tag</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
