--- a/ImpactMap/Views/Categories/Details.cshtml
+++ b/ImpactMap/Views/Categories/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ImpactMap.Models.Category
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Category Details";
 }
 <div class="container">
-    <h2>Details</h2>
+    <h2>@ViewBag.Title</h2>
 
     <div>
-        <h4>Category</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
