--- a/ImpactMap/Views/Entities/Create.cshtml
+++ b/ImpactMap/Views/Entities/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ImpactMap.Models.Entity
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Organization";
 }
 
 @*Create Entity Page*@
