--- a/ImpactMap/Views/Entities/Details.cshtml
+++ b/ImpactMap/Views/Entities/Details.cshtml
@@ -1,14 +1,13 @@
 ﻿@model ImpactMap.Models.Entity
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Organization Details";
 }
 
 <div class="container">
-<h2>Details</h2>
+<h2> @ViewBag.Title</h2>
 
 <div>
-    <h4>Organization</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
