--- a/ImpactMap/Views/Metrics/Delete.cshtml
+++ b/ImpactMap/Views/Metrics/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model ImpactMap.Models.Metric
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Metric";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Metric</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
