--- a/ImpactMap/Views/Metrics/Details.cshtml
+++ b/ImpactMap/Views/Metrics/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ImpactMap.Models.Metric
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Metric Details";
 }
 
-<h2>Details</h2>
+<h2>@ViewBag.Title</h2>
 
 <div>
-    <h4>Metric</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
