--- a/ImpactMap/Views/Metrics/Edit.cshtml
+++ b/ImpactMap/Views/Metrics/Edit.cshtml
@@ -1,17 +1,16 @@
 ﻿@model ImpactMap.Models.Metric
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Metric";
 }
 
-<h2>Edit</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Metric</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
