--- a/ImpactMap/Views/Reports/Delete.cshtml
+++ b/ImpactMap/Views/Reports/Delete.cshtml
@@ -1,15 +1,14 @@
 ﻿@model ImpactMap.Models.Report
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Report";
 }
 
 <div class="container">
-    <h2>Delete</h2>
+    <h2>@ViewBag.Title</h2>
 
     <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>Report</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
