--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -126,7 +126,7 @@
                     data.map(function (category) {
                         if (category.isBase == false) {
                             $('#CatList ul').append('<li id="cat' + category.ID + '" data-id=' + category.ID + '><span id="catspan' + category.ID + '" class="fa fa-square-o"></span> ' + category.name + '</li>');
-                            $('#cat' + category.ID).click(function () { toggle_category(category.ID); });
+                            $('#cat' + category.ID).click(function () { toggle_category(category.ID + "," + category.baseID); });
                         }
                     });
                     //$('#CatList').append('</ul>');
