--- a/ImpactMap/Views/Shared/_Layout.cshtml
+++ b/ImpactMap/Views/Shared/_Layout.cshtml
@@ -46,7 +46,10 @@
                     <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
                 </ul>
 =======*@
-            
+                @*<div class="navbar-collapse collapse">
+
+                    @Html.Partial("_Notifications")
+                </div>*@            
             <div class="navbar-collapse collapse">
 
                 @Html.Partial("_LoginPartial")
